--- a/index.ejs
+++ b/index.ejs
@@ -27,6 +27,10 @@
     <div class="jumbotron"  style="padding:40px;">
       <h1>Hello, world!</h1>
       <p><%= text %></p>
+      <form method='get' action='/request'>
+	<input type='text' name='value' required>
+	<input type='submit' value='Send data!'>
+      </form>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
   </div>
