--- a/login/css/style.css
+++ b/login/css/style.css
@@ -56,6 +56,7 @@ input {
 }
 .form--login label,
 .form--login input[type="text"],
+.form--login input[type="button"],
 .form--login input[type="password"],
 .form--login input[type="submit"] {
   border-radius: 0.25rem;
@@ -76,13 +77,13 @@ input {
 .form--login input[type="text"]:focus, .form--login input[type="text"]:hover, .form--login input[type="password"]:focus, .form--login input[type="password"]:hover {
   background-color: #434A52;
 }
-.form--login input[type="submit"] {
+.form--login input[type="submit"], .form--login input[type="button"] {
   background-color: #ea4c88;
   color: #eee;
   font-weight: bold;
   text-transform: uppercase;
 }
-.form--login input[type="submit"]:focus, .form--login input[type="submit"]:hover {
+.form--login input[type="submit"]:focus, .form--login input[type="submit"]:hover, .form--login input[type="button"]:focus, .form--login input[type="button"]:hover {
   background-color: #d44179;
 }
 .form__field {
