--- a/login/login.ejs
+++ b/login/login.ejs
@@ -16,6 +16,10 @@
 
     <div class="grid__container">
 
+        <% if (message.length > 0) { %>
+        <div class="alert alert-danger"><%= message %></div>
+        <% } %>
+
       <form action="/login" method="post" class="form form--login">
 
         <div class="form__field">
