--- a/login/login.ejs
+++ b/login/login.ejs
@@ -17,7 +17,10 @@
     <div class="grid__container">
 
         <% if (message.length > 0) { %>
-        <p class="alert alert-danger"><%= message %></p>
+            <section class="alert alert-danger">
+	            <h3>Oh snap!</h3>
+	            <p><%= message %></p>
+            </section>
         <% } %>
 
       <form action="/login" method="post" class="form form--login">
