--- a/login/login.ejs
+++ b/login/login.ejs
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html >
+
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
   <head>
     <meta charset="UTF-8">
     <title>Login</title>
@@ -18,7 +21,6 @@
 
         <% if (message.length > 0) { %>
             <section class="alert alert-danger">
-	            <h3>Oh snap!</h3>
 	            <p><%= message %></p>
             </section>
         <% } %>
