--- a/login/login.ejs
+++ b/login/login.ejs
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html >
 
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<style .alert-danger,
+.alert-error {
+    color: #b94a48;
+    background-color: #f2dede;
+    border-color: #eed3d7;
+}
+</style>
 
   <head>
     <meta charset="UTF-8">
@@ -20,7 +26,7 @@
     <div class="grid__container">
 
         <% if (message.length > 0) { %>
-            <section class="alert alert-danger">
+            <section class="alert-danger">
 	            <p><%= message %></p>
             </section>
         <% } %>
