--- a/login/css/style.css
+++ b/login/css/style.css
@@ -138,7 +138,7 @@ input {
 }
 
 .alert-error {
-    color: #b94a48;
-    background-color: #f2dede;
+    color: #D8000C;
+    background-color: #FFBABA;
     border-color: #eed3d7;
 }
