--- a/login/login.ejs
+++ b/login/login.ejs
@@ -18,8 +18,8 @@
     <div class="grid__container">
 
         <% if (message.length > 0) { %>
-            <div class="alert-error">
-	            <p><%= message %></p>
+            <div class="alert-box error"><span>error: </span>
+	            <%= message %>
             </div>
         <% } %>
 
