--- a/login/login.ejs
+++ b/login/login.ejs
@@ -19,7 +19,7 @@
 
         <% if (errorMessage.length > 0) { %>
             <div class="alert-box error"><span>error: </span>
-	            <%= errorMessagemessage %>
+	            <%= errorMessage %>
             </div>
         <% } %>
 
