--- a/login/login.ejs
+++ b/login/login.ejs
@@ -24,7 +24,7 @@
         <% } %>
 
         <% if (verifiedMessage.length > 0) { %>
-            <div class="alert-box success"><span>error: </span>
+            <div class="alert-box success"><span>ok: </span>
 	            <%= verifiedMessage %>
             </div>
         <% } %>
