--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -10,17 +10,20 @@
         <script src="../libraries/jquery-2.1.1.min.js" charset="utf-8"></script>
 
         <script>
-            $(document).ready(function() {
-                var codeA;
-                $("#codeAdminS").click(function(e) {
-                    e.preventDefault();
-                    codeA = $("#codeAdminT").val();
-                    $.post("communication", {codeV: codeA}, function(data) {
-                        if (data == 'okay')
-                            alert("Okay!");
-                        else
-                            alert("Ooops...");
-                    });
+            $("#codeAdminS").click(function(e) {
+                e.preventDefault();
+
+                var data = {};
+				data.code = $("#codeAdminT").val();;
+
+				$.ajax({
+					type: 'POST',
+					data: JSON.stringify(data),
+			        contentType: 'application/json',
+                    url: 'http://localhost:3000/communication',
+                    success: function(data) {
+                        alert('success: ' + data);
+                    }
                 });
             });
         </script>
