--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -12,7 +12,7 @@
         <script>
             $("#codeAdminS").click(function(e) {
                 e.preventDefault();
-
+                alert('Working ajax...');
                 var data = {};
 				data.code = $("#codeAdminT").val();;
 
