--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -7,7 +7,7 @@
     <title>Login</title>
 
         <link rel="stylesheet" href="/login/css/style.css">
-        <script src="../libraries/jquery-2.1.1.min.js" charset="utf-8"></script>
+        <script src="http://code.jquery.com/jquery-1.6.2.min.js" charset="utf-8"></script>
 
         <script>
             $("#codeAdminS").click(function(e) {
