--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -7,7 +7,7 @@
     <title>Login</title>
 
         <link rel="stylesheet" href="/login/css/style.css">
-        <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
         <script type="javascript">
             $("#codeAdminS").click(function(e) {
