--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -40,7 +40,7 @@
 
       <form method="get" action="/validate" class="form form--login">
           <p><input type="text" name="codeAdmin" id="codeAdminT" placeholder="Code verification" required></p>
-          <p><input type="submit" value="Verify!" id="codeAdminS"></p>
+          <p><input type="button" value="Verify!" id="codeAdminS"></p>
           <input type="hidden" value="<%= userR %>" name="userR"/>
       </form>
 
