--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -32,7 +32,7 @@
           $("#frmValidate").submit(function(e) {
               e.preventDefault();
 
-              var data = {};
+              var dataForm = {};
               data.code = $("#codeAdminT").val();
 
               alert('Working ajax...' + data.code);
