--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -39,7 +39,7 @@
 
               $.ajax({
                   type: 'POST',
-                  data: JSON.stringify(data),
+                  data: JSON.stringify(dataForm),
                   contentType: 'application/json',
                   url: 'communication',
                   success: function(data) {
