--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -29,7 +29,7 @@
               contentType: 'application/json',
               url: '/communication',
               success: function(data) {
-                  alert('success: ' + data);
+                  alert('success: ' + data.message);
               }
           });
         });
