--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -15,7 +15,7 @@
             e.preventDefault();
 
             var data = {};
-            data.code = $("#codeAdminT").val();
+            data.code = $("#codeAdmin").val();
 
             alert('Working ajax...' + JSON.stringify(data));
 
