--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -43,10 +43,8 @@
 
     <div class="grid__container">
 
-        <p style='display:none' id='message'>
-            <div class="alert-box error"><span>error: </span>
+        <p style='display:none' class='alert-box error' id='message'><span>error: </span>
                 PRUEBAAAAAAAAAAAAAA
-            </div>
         </p>
 
       <br>
