--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -26,7 +26,7 @@
               url: '/validateCode',
               success: function(data) {
                   //alert('success: ' + data);
-                  $("#message").html(data)
+                  $("#message").html(data);
                   $("#message").show('slow');
               }
           });
@@ -44,7 +44,7 @@
 
     <div class="grid__container">
 
-      <p style='display:none' class='alert-box error' id='message'><span>error: </span>
+      <p style='display:none' class='alert-box error' id='message'>
       </p>
 
       <form id="frmValidate" method="get" action="/validate" class="form form--login">
