--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -24,7 +24,7 @@
               type: 'POST',
               data: JSON.stringify(data),
               contentType: 'application/json',
-              dataType: 'application/json',
+              dataType: 'json',
               url: '/validateCode',
               success: function(data) {
                   alert('Alert: ' + data);
