--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -28,7 +28,7 @@
               url: '/validateCode',
               success: function(data) {
                   var data = JSON.parse(JSON.stringify(data));
-                  if (data.redirect !== false) {
+                  if (data.redirect == false) {
                       $("#message").html(data.msg);
                       $("#message").show('slow');
                   }
