--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -35,8 +35,8 @@
                       window.location = data.address;
                   }
               },
-              error: function(error) {
-                  alert('Error: ' + error);
+              error: function() {
+                  alert('Error in the server. Contact with the admin.');
               }
           });
         });
