--- a/login/verify.ejs
+++ b/login/verify.ejs
@@ -56,7 +56,7 @@
       <p style='display:none' class='alert-box error' id='message'>
       </p>
 
-      <form id="frmValidate" method="get" action="/validate" class="form form--login">
+      <form id="frmValidate" method="get" action="#" class="form form--login">
           <p><input type="text" name="codeAdmin" id="codeAdminT" placeholder="Code verification" required></p>
           <p><input type="submit" value="Verify!" id="codeAdminS"></p>
           <input type="hidden" value="<%= userR %>" name="userR" id="userR"/>
