--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
 
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
   </head>
 
