--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
 
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="/styles/style.css">
 
   </head>
 
