Users in main memory

--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <title>Login</title>
 
-    <link rel="stylesheet" href="/styles/style.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="/public/css/style.css">
+    <script src="/public/js/jquery-2.1.1.min.js"></script>
 
     <script type="text/javascript">
       $(document).ready(function() {
