--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/public/css/style.css">
     <script src="/public/js/jquery-2.1.1.min.js"></script>
 
-    <script type="text/javascript">
+    <script>
       $(document).ready(function() {
         $("#frmValidate").submit(function(e) {
             e.preventDefault();
