--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 <html >
 
   <head>
+
     <meta charset="UTF-8">
     <title>Login</title>
 
@@ -29,7 +30,7 @@
             </div>
         <% } %>
 
-      <form action="/login" method="post" class="form form--login">
+      <form id="frmLogin" action="/login" method="post" class="form form--login">
 
         <div class="form__field">
           <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
