--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,9 +4,42 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>Login</title>
+
+    <title>Sign Up</title>
 
         <link rel="stylesheet" href="/public/css/style.css">
+        <script src="/public/js/jquery-2.1.1.min.js"></script>
+
+        <script>
+          $(document).ready(function() {
+            $("#formRegister").submit(function(e) {
+                e.preventDefault();
+
+                var data = $('#register__username').val();
+
+                $.ajax({
+                  type: 'POST',
+                  data: data,
+                  dataType: 'json',
+                  url: '/validateUsername',
+                  success: function(data) {
+                      var data = JSON.parse(JSON.stringify(data));
+
+                      if (!data.accepted) {
+                          $("#message").html(data.msg);
+                          $("#message").show('slow');
+                      }
+                      else {
+                          $(this).submit();
+                      }
+                  },
+                  error: function() {
+                      alert('Error in the server. Contact with the admin.');
+                  }
+              });
+            });
+        });
+        </script>
 
   </head>
 
@@ -18,31 +51,26 @@
 
     <div class="grid__container">
 
-        <% if (errorMessage.length > 0) { %>
-            <div class="alert-box error"><span>error: </span>
-                <%= errorMessage %>
-            </div>
-        <% } %>
+        <p style='display:none' class='alert-box error' id='message'>
+        </p>
 
-	<br>
+        <form id="formRegister" action="/verify" method="post" class="form form--login">
+          <p><label> New User </label></p>
+          <div class="form__field">
+            <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
+            <input name="userR" id="register__username" type="text" class="form__input" placeholder="Username" required>
+          </div>
 
-      <form id="formRegister" action="/verify" method="post" class="form form--login">
-        <p><label> New User </label></p>
-        <div class="form__field">
-          <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
-          <input name="userR" id="login__username" type="text" class="form__input" placeholder="Username" required>
-        </div>
+          <div class="form__field">
+            <label class="fontawesome-lock" for="login__password"><span class="hidden">Password</span></label>
+            <input name="passwordR" id="register__password" type="password" class="form__input" placeholder="Password" required>
+          </div>
 
-        <div class="form__field">
-          <label class="fontawesome-lock" for="login__password"><span class="hidden">Password</span></label>
-          <input name="passwordR" id="login__password" type="password" class="form__input" placeholder="Password" required>
-        </div>
+          <div class="form__field">
+            <input type="submit" value="Register">
+          </div>
 
-        <div class="form__field">
-          <input type="submit" value="Register">
-        </div>
-
-      </form>
+        </form>
 
     </div>
 
