--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,6 +20,7 @@
                 $.ajax({
                   type: 'POST',
                   data: data,
+                  contentType: 'application/json',
                   dataType: 'json',
                   url: '/validateUsername',
                   success: function(data) {
