--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,7 +20,7 @@
 
                 $.ajax({
                   type: 'POST',
-                  data: data,
+                  data: JSON.stringify(data),
                   contentType: 'application/json',
                   dataType: 'json',
                   url: '/validateUsername',
