--- a/views/register.ejs
+++ b/views/register.ejs
@@ -56,7 +56,7 @@
         <p style='display:none' class='alert-box error' id='message'>
         </p>
 
-        <form id="formRegister" action="/verify" method="post" class="form form--login">
+        <form id="formRegister" action="#" method="post" class="form form--login">
           <p><label> New User </label></p>
           <div class="form__field">
             <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
