--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,6 +32,7 @@
                           $("#message").show('slow');
                       }
                       else {
+                          alert('Submit!');
                           $("#formRegister").submit();
                       }
                   },
@@ -58,7 +59,7 @@
 
         <br>
 
-        <form id="formRegister" action="#" method="post" class="form form--login">
+        <form id="formRegister" action="/verify" method="post" class="form form--login">
           <p><label> New User </label></p>
           <div class="form__field">
             <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
