--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -32,7 +32,7 @@
                       $("#message").show('slow');
                   }
                   else {
-                      return;
+                      window.location = data.address;
                   }
               },
               error: function() {
