--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,7 +32,7 @@
                           $("#message").show('slow');
                       }
                       else {
-                          return;
+                          return true;
                       }
                   },
                   error: function() {
