--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
         <script>
           $(document).ready(function() {
             $("#formRegister").submit(function(e) {
-                //e.preventDefault();
+                e.preventDefault();
 
                 var data = {};
                 data.username = $('#register__username').val();
@@ -30,10 +30,10 @@
                       if (!data.accepted) {
                           $("#message").html(data.msg);
                           $("#message").show('slow');
-                          e.preventDefault();
+                          //e.preventDefault();
                       }
                       else {
-                          return true;
+                          this.submit();
                       }
                   },
                   error: function() {
