--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,6 +45,8 @@
                   }
               });
 
+              console.log(validate);
+
               if (!validate)
                 e.preventDefault();
 
