--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,7 +45,7 @@
                   }
               });
 
-              console.log(validate);
+              alert(validate);
 
               if (!validate)
                 e.preventDefault();
