--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,13 +12,15 @@
 
         <script>
           $(document).ready(function() {
+              var validate;
+
             $("#formRegister").submit(function(e) {
                 //e.preventDefault();
 
                 var data = {};
                 data.username = $('#register__username').val();
 
-                var validate;
+                //var validate;
 
                 $.ajax({
                   type: 'POST',
