--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,7 @@
                           $("#message").show('slow');
                       }
                       else {
-                          $(this).unbind('submit').submit();
+                          $("#formRegister").unbind('submit').submit();
                       }
                   },
                   error: function() {
